<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Milktea</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="share">Share</string>
    <string name="menu_send">Send</string>
    <string name="search">Search</string>
    <string name="notification">Notifications</string>
    <string name="message">Messages</string>
    <string name="start_auth">Authenticate</string>
    <string name="selecting_instance">Selected instance</string>
    <string name="following">Following</string>
    <string name="follower">Followers</string>
    <string name="renote">Renote</string>
    <string name="renote_in_channel">Renote in channel</string>
    <string name="quote_renote">Quote renote</string>
    <string name="quote_renote_in_channel">Quote renote in channel</string>
    <string name="discovery">Discovery</string>
    <string name="renote_was">Renote</string>
    <string name="input_custom_emoji">Emoji</string>
    <string name="title_activity_settings">Settings</string>
    <string name="reply_title">Default reply action</string>
    <string name="sync_title">Sync periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming requests
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="setting">Settings</string>
    <string name="nav_like">Favorites</string>
    <string name="nav_list">Lists</string>
    <string name="nav_cloud">Drive</string>
    <string name="nav_setting_tab">Set tab</string>
    <string name="add_search">Add search</string>
    <string name="save_setting">Save settings</string>
    <string name="tab_selected">Added</string>
    <string name="tab_selectable">Add from below</string>
    <string name="title_featured">Highlights</string>
    <string name="add_account">Add account</string>
    <string name="post">Post</string>
    <string name="notes_and_replies">Notes and replies</string>
    <string name="please_speak">What\'s on your mind?</string>
    <string name="open">Open</string>
    <string name="multiple_answer">Multiple answers</string>
    <string name="add_choice">Add answer</string>
    <string name="cw_hint">Alt text (optional)</string>
    <string name="show_reply">Show replies</string>
    <string name="show_conversation">View conversation</string>
    <string name="copy_url">Copy URL</string>
    <string name="copy_content">Copy content</string>
    <string name="show_detail">Detail</string>
    <string name="favorite">Favorite</string>
    <string name="remove_favorite">Remove favorites</string>
    <string name="remove">Remove</string>
    <string name="pin">Pin</string>
    <string name="media">Media</string>
    <string name="follow">Follow</string>
    <string name="include_local_renotes">Show local renotes on the timeline</string>
    <string name="include_renoted_my_notes">Show renotes of your notes on the timeline</string>
    <string name="include_my_renotes">Show your renotes on the timeline</string>
    <string name="auto_load_timeline">Load timeline automatically</string>
    <string name="timeline">Timeline</string>
    <string name="capture_note_when_stopped" tools:ignore="Typos">Look for notes notes when the instance\'s server is stopped</string>
    <string name="auto_load_when_stopped" tools:ignore="Typos">Automatically look for notes notes when the instance\'s server is stopped</string>
    <string name="sync">Sync</string>
    <string name="movement">Movement</string>
    <string name="remove_note">Delete notes</string>
    <string name="hide_removed_note">Hide deleted notes</string>
    <string name="appearance">Appearance</string>
    <string name="theme">Theme</string>
    <string name="theme_white">White</string>
    <string name="theme_black">AMOLED</string>
    <string name="theme_dark">Dark</string>
    <string name="theme_bread">Pancake</string>
    <string name="theme_mastodon_dark">Elephant Dark</string>
    <string name="title_activity_media">MediaActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="sensitive_content">Sensitive content</string>
    <string name="thumbnail">Thumbnail</string>
    <string name="play_media">Play</string>
    <string name="avataricon">avatarIcon</string>
    <string name="reaction">Reaction</string>
    <string name="followed_by">Followed by %s</string>
    <string name="replied_by">Reply from %s</string>
    <string name="quoted_by">Quoted by %s</string>
    <string name="voted_by">poll voted in by %s</string>
    <string name="total_vote_count">%s votes in total</string>
    <string name="mention_by">mentioned by %s</string>
    <string name="reacted_by">reaction sent by %s</string>
    <string name="renoted_by">renoted by %s</string>
    <string name="input_message">What\'s up?</string>
    <string name="manifest_user_name_pattern">"@"\w([\w-]*\w)?(?:@[\w.\-]+\w)?</string>
    <string name="followee_state">Followed</string>
    <string name="mute">Mute</string>
    <string name="block">Block</string>
    <string name="unmute">Unmute</string>
    <string name="unblock">Unblock</string>
    <string name="add_to_tab">Add to tab</string>
    <string name="detail">Detail</string>
    <string name="instance_domain">Instance URL</string>
    <string name="sign_in">Login</string>
    <string name="user_name">Username</string>
    <string name="password">Password</string>
    <string name="sign_out">Logout</string>
    <string name="token">Token</string>
    <string name="add_app">Add app</string>
    <string name="selected_account">Selected account</string>
    <string name="account">Account</string>
    <string name="selected_app">Selected app</string>
    <string name="custom_app">Custom app</string>
    <string name="custom_app_name">App name</string>
    <string name="custom_app_description">Application overview</string>
    <string name="your_app_name">Custom app name</string>
    <string name="description_of_app_description">Displayed during authentication</string>
    <string name="create">Create</string>
    <string name="auth_failed">Failed</string>
    <string name="expired">Expired</string>
    <string name="auth_required">Authentication required</string>
    <string name="invalid_url">Invalid URL</string>
    <string name="invalid_pw_id">Invalid password/ID</string>
    <string name="auth">Authentication</string>
    <string name="often_use">Often use</string>
    <string name="all">All</string>
    <string name="visibility_public">Public</string>
    <string name="visibility_home">Home</string>
    <string name="visibility_follower">Followers only</string>
    <string name="visibility_specified">Direct</string>
    <string name="visibility_public_local_only">Public (local only)</string>
    <string name="visibility_home_local_only">Home (local only)</string>
    <string name="visibility_follower_local_only">Followers only (local only)</string>
    <string name="show">Show</string>
    <string name="user_list">User list</string>
    <string name="update_user_list">Edit list</string>
    <string name="add_user">Add user</string>
    <string name="list_name">List name</string>
    <string name="create_user_list">Create list</string>
    <string name="at_mark">\@</string>
    <string name="host">Host</string>
    <string name="select_user">Select user</string>
    <string name="selecting_users">Selecting user</string>
    <string name="https">https://</string>
    <string name="conversation">Conversation</string>
    <string name="add_address">Add address</string>
    <string name="indefinite_period">Indefinite period</string>
    <string name="date_and_time_specification">Specific date and time</string>
    <string name="future">Future</string>
    <string name="now">Now</string>
    <string name="time_with_year_ago">%sYR</string>
    <string name="time_with_month_ago">%sMOS</string>
    <string name="time_with_date_ago">%sD</string>
    <string name="time_with_hour_ago">%sHR</string>
    <string name="time_with_minute_ago">%sMIN</string>
    <string name="time_with_second_ago">%sS</string>
    <string name="select_file">Select file</string>
    <string name="network_error">Network error</string>
    <string name="selected">Selected</string>
    <string name="more">More</string>
    <string name="delete_and_edit">Delete and redraft</string>
    <string name="license">License</string>
    <string name="standard_reaction">Standard reaction</string>
    <string name="set_the_reaction_displayed_in_the_reaction_picker">Set the reaction displayed in the reaction picker</string>
    <string name="reaction_picker">Reaction picker</string>
    <string name="list_picker">List picker</string>
    <string name="simple_picker">Simple picker</string>
    <string name="enter_reaction">Enter reaction</string>
    <string name="click_to_delete_the_reaction">Tap to remove the reaction</string>
    <string name="confirm_delete_reaction">Confirm reaction removal</string>
    <string name="delete_reaction">Remove reaction</string>
    <string name="user">User</string>
    <string name="note_opacity">Note opacity</string>
    <string name="transparent">Transparent</string>
    <string name="opaque">Opaque</string>
    <string name="background_image">Background image</string>
    <string name="hide_bottom_navigation">Hide bottom menu</string>
    <string name="user_name_as_default_display_name">Set username as default display name</string>
    <string name="successfully_created_the_app">Successfully created the app</string>
    <string name="continue_auth">Continue</string>
    <string name="home_timeline">Home</string>
    <string name="global_timeline">Global</string>
    <string name="local_timeline">Local</string>
    <string name="hybrid_timeline">Social</string>
    <string name="mention">Mentions</string>
    <string name="add_tab">Add tab</string>
    <string name="list">Lists</string>
    <string name="tag">Hashtags</string>
    <string name="featured">Featured</string>
    <string name="antenna">Antennas</string>
    <string name="rename">Rename</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="update_timeline_in_background">Update timeline in background</string>
    <string name="edit_tab">Edit tab</string>
    <string name="follow_request_accepted_by">Follow request accepted by %s</string>
    <string name="poll_ended">Poll ended</string>
    <string name="confirm_deletion">Confirm deletion</string>
    <string name="name">name</string>
    <string name="receiving_source">Receiving source</string>
    <string name="all_notes">All notes</string>
    <string name="draft_notes">Draft notes</string>
    <string name="add_to_list">Add to list</string>
    <string name="gallery">Gallery</string>
    <string name="report">Report</string>
    <string name="channel">Channel</string>
    <string name="groups">Groups</string>
    <string name="switch_account">Switch Account</string>
    <string name="clip">Clip</string>
    <string name="user_detail_mute_renotes">Mute Renotes</string>
    <string name="user_detail_unmute_renotes">Unmute renotes</string>
    <string name="import_reactions_from_the_web">Import reactions from the web</string>
</resources>