<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        tools:showIn="navigation_view">

    <group android:checkableBehavior="single">

        <item
                android:id="@+id/nav_switch_account"
                android:icon="@drawable/ic_supervisor_account_black_24dp"
                android:title="@string/switch_account"
            />
        <item
                android:id="@+id/nav_favorite"
                android:icon="@drawable/ic_star_black_24dp"
                android:title="@string/nav_like" />
        <item
                android:id="@+id/nav_list"
                android:icon="@drawable/ic_format_list_bulleted_black_24dp"
                android:title="@string/nav_list" />

        <item
                android:id="@+id/nav_drive"
                android:icon="@drawable/ic_cloud_black_24dp"
                android:title="@string/nav_cloud" />
        <item
                android:id="@+id/nav_channel"
                android:title="@string/channel"
                android:icon="@drawable/ic_baseline_radio_24" />
        <item
                android:id="@+id/nav_antenna"
                android:icon="@drawable/ic_call_received_black_24dp"
                android:title="@string/antenna" />
        <item
                android:id="@+id/nav_draft"
                android:icon="@drawable/ic_drafts_black_24dp"
                android:title="@string/draft_notes" />
        <item
                android:id="@+id/nav_gallery"
                android:title="@string/gallery"
                android:icon="@drawable/ic_menu_gallery" />

        <item
                android:id="@+id/nav_clip"
                android:title="@string/clip"
                android:icon="@drawable/ic_attachment_24px" />
        <item
                android:id="@+id/nav_group"
                android:icon="@drawable/ic_groups"
                android:title="@string/groups" />
        <item
                android:id="@+id/nav_setting"
                android:title="@string/setting"
                android:icon='@drawable/ic_settings_black_24dp' />


    </group>


</menu>
