<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:tools="http://schemas.android.com/tools"
      tools:showIn="navigation_view"
>


    <item
            android:id="@+id/navigation_home"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/menu_home" />
    <item
            android:id="@+id/navigation_search"
            android:title="@string/search"
            android:icon="@drawable/ic_search_40px"/>
    <item
            android:id="@+id/navigation_notification"
            android:title="@string/notification" android:icon="@drawable/ic_selectable_notification"/>
    <item
            android:id="@+id/navigation_message_list"
            android:title="@string/message" android:icon="@drawable/ic_account_circle_40px"/>
</menu>