<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
            android:id="@+id/action_update_list_user"
            android:icon="@drawable/ic_edit_black_24dp"
            android:title="@string/update_user_list"
            tools:ignore="PrivateResource"
            app:showAsAction="ifRoom"/>

    <item
            android:id="@+id/action_add_user"
            android:icon="@drawable/ic_person_add_black_24dp"
            android:title="@string/add_user"
            app:showAsAction="ifRoom"/>
    <item
            android:id="@+id/action_add_to_tab"
            android:icon="@drawable/ic_add_black_24dp"
            android:title="@string/add_to_tab"
            app:showAsAction="ifRoom"/>

</menu>