<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/baseFrame"
    android:layout_width="match_parent"
    android:layout_height="100dp"
    tools:ignore="NestedWeights"
    >

    <ImageView
        android:id="@+id/thumbnail"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/thumbnail"
        android:scaleType="centerCrop"
        tools:srcCompat="@drawable/ic_baseline_hide_image_24"
        />
    <ImageButton
        android:id="@+id/actionButton"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/play_media"
        style="?android:attr/borderlessButtonStyle"
        android:src="@drawable/ic_play_circle_outline_black_24dp"
        android:scaleType="fitCenter"
        app:tint="?attr/colorAccent" />

    <TextView
        android:id="@+id/nsfwMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="クリックで表示"
        android:layout_gravity="center"
        android:text="@string/sensitive_content"
        android:background="@drawable/shape_media_message_background"
        android:padding="4dp"
        android:textColor="@android:color/white"
        />
    <ImageButton
        android:id="@+id/toggleVisibilityButton"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_gravity="top|end"

        tools:ignore="ContentDescription"

        />

</FrameLayout>