<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        tools:context="net.pantasystem.milktea.setting.activities.ReactionSettingActivity">
    <data>
        <variable
                name="reactionPickerSettingViewModel"
                type="net.pantasystem.milktea.setting.viewmodel.reaction.ReactionPickerSettingViewModel" />
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >

        <androidx.appcompat.widget.Toolbar
                android:id="@+id/reactionSettingToolbar"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:minHeight="?attr/actionBarSize"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:title="@string/reaction_picker"/>

        <ScrollView
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/reactionSettingToolbar">

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="16dp">
                <TextView
                        android:id="@+id/textView25"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/reaction_picker"
                        android:textSize="20sp"
                        android:textColor="?android:textColorPrimary"/>

                <Spinner
                        android:id="@+id/reactionPickerType"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="16dp"
                        android:entries="@array/reaction_picker_type"/>

                <TextView
                        android:id="@+id/textView24"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="20sp"
                        android:text="@string/standard_reaction"
                        android:textColor="?android:textColorPrimary"/>
                <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/reactionSettingListView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>
                <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/click_to_delete_the_reaction"
                        android:layout_marginBottom="8dp"
                    />
                <AutoCompleteTextView
                        android:id="@+id/reactionSettingField"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/enter_reaction"
                        android:focusable="true"
                        android:focusableInTouchMode="true"
                        android:singleLine="true"
                        android:imeOptions="actionSend"
                        />

                <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/set_the_reaction_displayed_in_the_reaction_picker"/>

                <Button
                        android:id="@+id/importReactionFromWebButton"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/import_reactions_from_the_web"/>


            </LinearLayout>
        </ScrollView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
