<?xml version="1.0" encoding="utf-8"?>
<layout  xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <import type="android.view.View"/>
        <import type="jp.panta.misskeyandroidclient.ui.SafeUnbox" />
        <variable
                name="fileViewData"
                type="jp.panta.misskeyandroidclient.viewmodel.file.FileViewData" />
    </data>
    <FrameLayout android:id="@+id/baseFrame"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:ignore="NestedWeights"
            thumbnailView="@{thumbnail}"
            playButton="@{actionButton}"
            fileViewData="@{fileViewData.file}"
            android:onClick="@{()-> fileViewData.show()}"
            >

        <ImageView
                android:id="@+id/thumbnail"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/thumbnail"
                android:scaleType="centerCrop"
                tools:srcCompat="@drawable/ic_baseline_hide_image_24"
                android:visibility="@{SafeUnbox.unbox(fileViewData.isHiding) ? View.GONE : View.VISIBLE }"
                />
        <ImageButton
                android:id="@+id/actionButton"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/play_media"
                style="?android:attr/borderlessButtonStyle"
                tools:srcCompat="@drawable/ic_play_circle_outline_black_24dp"
                android:scaleType="fitCenter"
                android:visibility="@{SafeUnbox.unbox(fileViewData.isHiding) || SafeUnbox.unbox(fileViewData.image) ? View.GONE : View.VISIBLE }"
                app:tint="?attr/colorAccent" />

        <TextView
                android:id="@+id/nsfwMessage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="クリックで表示"
                android:layout_gravity="center"
                android:visibility="@{SafeUnbox.unbox(fileViewData.isHiding) ? View.VISIBLE : View.GONE }"
                android:text="@string/sensitive_content"
                />

    </FrameLayout>
</layout>
